Fixed styling on text editor. No overflow now.

--- a/public/styles/writearticle.css
+++ b/public/styles/writearticle.css
@@ -74,12 +74,6 @@
     margin-right: 2%;
 }
 
-#articleTitle
-{
-    width: 100%;
-    height: 2em;
-}
-
 #editorMain,
 #editorMain h1,
 #documentContainer
@@ -88,7 +82,18 @@
     border-radius: 10px;
     width: 98%;
     padding: 1%;
+}
+
+#documentContainer
+{
     margin-bottom: 3%;
+}
+
+#articleTitle
+{
+    width: 100%;
+    height: 2em;
+    margin-bottom: 0.5%;
 }
 
 #editorMain button
@@ -100,6 +105,7 @@
 {
     height: 50vh;
     overflow-y: auto;
+    margin-bottom: 1%;
 }
 
 /* CLASSES */
